fix: toList方法返回的 list 不能 add数据